@@ -1,5 +1,5 @@
 @echo off
 cd bin
-javac EternalBreaker.java
+javac --module-path ../lib --add-modules javafx.controls,javafx.fxml EternalBreaker.java
 java --module-path ../lib --add-modules javafx.controls,javafx.fxml EternalBreaker
 pause
